@@ -43,6 +43,7 @@ if (!checkAccess()) {
 
 $id_groupe = isset($_POST['id_groupe']) ? $_POST['id_groupe'] : (isset($_GET['id_groupe']) ? $_GET['id_groupe'] : NULL);
 $id_classe = isset($_POST['id_classe']) ? $_POST['id_classe'] : (isset($_GET['id_classe']) ? $_GET['id_classe'] : NULL);
+$id_aid = isset($_POST['id_aid']) ? $_POST['id_aid'] : (isset($_GET['id_aid']) ? $_GET['id_aid'] : NULL);
 
 $mode = isset($_POST['mode']) ? $_POST['mode'] : (isset($_GET['mode']) ? $_GET['mode'] : NULL);
 
@@ -89,6 +90,12 @@ if (is_numeric($id_groupe) && $id_groupe > 0) {
 
 if ($current_group) {
 	$nom_fic = $current_group["name"] . "-" . remplace_accents(preg_replace('/, /','~',$current_group["classlist_string"]),'all') . ".csv";
+} elseif(isset($id_aid)) {
+	if(!preg_match("/^[0-9]{1,}$/", $id_aid)) {
+		die("Indice AID '$id_aid' invalide.");
+	}
+	$tab_aid=get_tab_aid($id_aid);
+	$nom_fic=remplace_accents($tab_aid['nom_aid']."_".$tab_aid['nom_general_complet']."_periode_".$periode_num,"all") . ".csv";
 } else {
 	if($id_classe=='toutes') {
 		$classe = "Toutes_les_classes";
@@ -194,6 +201,153 @@ if($current_group) {
 
 	foreach($current_group["eleves"][$periode_num]["users"] as $current_eleve) {
 	//foreach($current_group["eleves"]["all"]["users"] as $current_eleve) {
+		$eleve_login = $current_eleve["login"];
+		$eleve_nom = $current_eleve["nom"];
+		$eleve_prenom = $current_eleve["prenom"];
+
+		//$eleve_classe = $current_eleve["classe"];
+		$sql="SELECT classe FROM classes WHERE id='".$current_eleve["classe"]."'";
+		$res_tmp=mysqli_query($GLOBALS["mysqli"], $sql);
+		if(mysqli_num_rows($res_tmp)==0){
+			die("$eleve_login ne serait dans aucune classe???</body></html>");
+		}
+		else{
+			$lig_tmp=mysqli_fetch_object($res_tmp);
+			$eleve_classe=$lig_tmp->classe;
+		}
+
+		// La fonction get_group() dans /lib/groupes.inc.php ne récupère pas le sexe et la date de naissance...
+		// ... pourrait-on l'ajouter?
+		$sql="SELECT sexe,naissance,lieu_naissance,email,no_gep,elenoet,ele_id FROM eleves WHERE login='$eleve_login'";
+		$res_tmp=mysqli_query($GLOBALS["mysqli"], $sql);
+
+		if(mysqli_num_rows($res_tmp)==0){
+			die("Problème avec les infos (date de naissance, sexe,...) de $eleve_login</body></html>");
+		}
+		else{
+			$lig_tmp=mysqli_fetch_object($res_tmp);
+			$eleve_sexe=$lig_tmp->sexe;
+			if((isset($format_naiss))&&($format_naiss=='jjmmaaaa')) {
+				$eleve_naissance=formate_date($lig_tmp->naissance);
+			}
+			else {
+				$eleve_naissance=$lig_tmp->naissance;
+			}
+			$eleve_email=$lig_tmp->email;
+			$eleve_no_gep=$lig_tmp->no_gep;
+			$eleve_elenoet=$lig_tmp->elenoet;
+			$eleve_ele_id=$lig_tmp->ele_id;
+
+			if($avec_lieu_naiss=='y') {
+				$eleve_lieu_naissance=get_commune($lig_tmp->lieu_naissance,'2');
+			}
+		}
+
+		if(((isset($avec_doublant))&&($avec_doublant=='y'))||
+		((isset($avec_regime))&&($avec_regime=='y'))) {
+			$sql="SELECT * FROM j_eleves_regime WHERE login='".$current_eleve["login"]."';";
+			$res_tmp=mysqli_query($GLOBALS["mysqli"], $sql);
+			if(mysqli_num_rows($res_tmp)==0) {
+				//die("Problème avec les infos (régime, doublant) de $eleve_login</body></html>");
+				$eleve_regime="X";
+				$eleve_doublant="X";
+			}
+			else {
+				while($lig_tmp=mysqli_fetch_object($res_tmp)) {
+					$eleve_regime=$lig_tmp->regime;
+					$eleve_doublant=$lig_tmp->doublant;
+				}
+			}
+		}
+
+		if((isset($avec_infos_resp))&&($avec_infos_resp=='y')) {
+			$eleve_infos_resp_1="";
+			$eleve_infos_resp_2="";
+			$eleve_infos_resp_0="";
+			
+			$sql="SELECT rp.*, r.resp_legal FROM resp_pers rp, responsables2 r WHERE r.ele_id='$eleve_ele_id' AND r.pers_id=rp.pers_id AND (r.resp_legal='1' OR r.resp_legal='2' OR (r.pers_contact='1' AND (rp.tel_pers!='' OR rp.tel_prof!='' OR rp.tel_port!='')));";
+			$res_tmp=mysqli_query($GLOBALS["mysqli"], $sql);
+			if(mysqli_num_rows($res_tmp)>0) {
+				while($lig_tmp=mysqli_fetch_object($res_tmp)) {
+					if($lig_tmp->resp_legal=='1') {
+						$eleve_infos_resp_1="$lig_tmp->civilite $lig_tmp->nom $lig_tmp->prenom;$lig_tmp->tel_pers;$lig_tmp->tel_prof;$lig_tmp->tel_port";
+					}
+					elseif($lig_tmp->resp_legal=='2') {
+						$eleve_infos_resp_2="$lig_tmp->civilite $lig_tmp->nom $lig_tmp->prenom;$lig_tmp->tel_pers;$lig_tmp->tel_prof;$lig_tmp->tel_port";
+					}
+					else {
+						if($eleve_infos_resp_0!="") {$eleve_infos_resp_0.=";";}
+						$eleve_infos_resp_0.="$lig_tmp->civilite $lig_tmp->nom $lig_tmp->prenom;$lig_tmp->tel_pers;$lig_tmp->tel_prof;$lig_tmp->tel_port";
+					}
+				}
+			}
+		}
+
+		//$fd.="$eleve_classe;$eleve_login;$eleve_nom;$eleve_prenom;$eleve_sexe;$eleve_naissance\n";
+
+		$ligne="";
+		if((isset($avec_classe))&&($avec_classe=='y')) {$ligne.="$eleve_classe;";}
+		if((isset($avec_login))&&($avec_login=='y')) {$ligne.="$eleve_login;";}
+		if((isset($avec_nom))&&($avec_nom=='y')) {$ligne.="$eleve_nom;";}
+		if((isset($avec_prenom))&&($avec_prenom=='y')) {$ligne.="$eleve_prenom;";}
+		if((isset($avec_sexe))&&($avec_sexe=='y')) {$ligne.="$eleve_sexe;";}
+		if((isset($avec_naiss))&&($avec_naiss=='y')) {$ligne.="$eleve_naissance;";}
+		if($avec_lieu_naiss=='y') {$ligne.="$eleve_lieu_naissance;";}
+
+		if((isset($avec_email))&&($avec_email=='y')) {$ligne.="$eleve_email;";}
+		if((isset($avec_statut))&&($avec_statut=='y')) {$ligne.="eleve;";}
+		if($_SESSION['statut']!='professeur') {
+			//if((isset($avec_ine))&&($avec_ine=='y')) {$ligne.="$eleve_no_gep;";}
+			if((isset($avec_elenoet))&&($avec_elenoet=='y')) {$ligne.="$eleve_elenoet;";}
+			if((isset($avec_ele_id))&&($avec_ele_id=='y')) {$ligne.="$eleve_ele_id;";}
+			if((isset($avec_no_gep))&&($avec_no_gep=='y')) {$ligne.="$eleve_no_gep;";}
+		}
+		if((isset($avec_doublant))&&($avec_doublant=='y')) {$ligne.="$eleve_doublant;";}
+		if((isset($avec_regime))&&($avec_regime=='y')) {$ligne.="$eleve_regime;";}
+
+		if((isset($avec_infos_resp))&&($avec_infos_resp=='y')) {$ligne.=$eleve_infos_resp_1.";".$eleve_infos_resp_2.";".$eleve_infos_resp_0.";";}
+
+		// Suppression du ; en fin de ligne
+		$ligne=preg_replace('/;$/','',$ligne);
+
+		$fd.=$ligne."\n";
+	}
+} elseif(isset($tab_aid)) {
+	if($_SESSION['statut']!='professeur') {
+		if((isset($avec_prof))&&($avec_prof=='y')) {
+			$sql="SELECT u.login, u.nom, u.prenom, u.email, u.civilite, u.numind FROM utilisateurs u, j_aid_utilisateurs jau WHERE jau.id_utilisateur=u.login AND jau.id_aid='$id_aid';";
+			//echo "$sql<br />\n";
+			$res_prof=mysqli_query($GLOBALS["mysqli"], $sql);
+			if(mysqli_num_rows($res_prof)>0) {
+				while($lig=mysqli_fetch_object($res_prof)) {
+					$ligne="";
+					if((isset($avec_classe))&&($avec_classe=='y')) {$ligne.=";";}
+					if((isset($avec_login))&&($avec_login=='y')) {$ligne.="$lig->login;";}
+					if((isset($avec_nom))&&($avec_nom=='y')) {$ligne.="$lig->nom;";}
+					if((isset($avec_prenom))&&($avec_prenom=='y')) {$ligne.="$lig->prenom;";}
+					if((isset($avec_sexe))&&($avec_sexe=='y')) {$ligne.="$lig->civilite;";}
+					if((isset($avec_naiss))&&($avec_naiss=='y')) {$ligne.=";";}
+					if((isset($avec_lieu_naiss))&&($avec_lieu_naiss=='y')) {$ligne.=";";}
+				
+					if((isset($avec_email))&&($avec_email=='y')) {$ligne.="$lig->email;";}
+					if((isset($avec_statut))&&($avec_statut=='y')) {$ligne.="professeur;";}
+					if($_SESSION['statut']!='professeur') {
+						//if((isset($avec_ine))&&($avec_ine=='y')) {$ligne.=";";}
+						if((isset($avec_elenoet))&&($avec_elenoet=='y')) {$ligne.="$lig->numind;";}
+						if((isset($avec_ele_id))&&($avec_ele_id=='y')) {$ligne.=";";}
+						if((isset($avec_no_gep))&&($avec_no_gep=='y')) {$ligne.=";";}
+					}
+				
+					// Suppression du ; en fin de ligne
+					$ligne=preg_replace('/;$/','',$ligne);
+			
+					$fd.=$ligne."\n";
+				}
+			}
+		}
+	}
+
+	foreach($tab_aid["eleves"][$periode_num]["users"] as $current_eleve) {
 		$eleve_login = $current_eleve["login"];
 		$eleve_nom = $current_eleve["nom"];
 		$eleve_prenom = $current_eleve["prenom"];
